--- a/exercise2/ex2_support/Makefile
+++ b/exercise2/ex2_support/Makefile
@@ -14,7 +14,7 @@ LINKERSCRIPT=lib/efm32gg.ld
 ex2.bin : ex2.elf
 	${OBJCOPY} -O binary $< $@
 
-ex2.elf : ex2.o timer.o dac.o gpio.o interrupt_handlers.o
+ex2.elf : ex2.o LETimer.o timer.o dac.o gpio.o interrupt_handlers.o
 	${LD} -T ${LINKERSCRIPT} $^ -o $@ ${LDFLAGS} 
 
 %.o : %.c
@@ -31,5 +31,6 @@ clean :
 .PHONY : all
 all :
 	clear
+	make clean
 	make
 	make upload
