Add an incremental build rule to the makefile.

--- a/exercise3/Makefile
+++ b/exercise3/Makefile
@@ -1,6 +1,6 @@
 # Please put me in OSELAS.BSP-EnergyMicro-Gecko
 
-.PHONY: setup
+.PHONY: setup inc_build
 
 
 setup:
@@ -9,3 +9,11 @@ setup:
 	ptxdist toolchain /opt/ex3/OSELAS.Toolchain-2012.12.0/arm-cortexm3-uclinuxeabi/gcc-4.7.2-uclibc-0.9.33.2-binutils-2.22-kernel-3.6-sanitized/bin
 	ptxdist images
 	ptxdist test flash-all
+
+inc_build:
+	ptxdist clean driver-gamepad
+	ptxdist compile driver-gamepad
+	ptxdist targetinstall driver-gamepad
+	ptxdist targetinstall kernel
+	ptxdist image root.romfs
+	ptxdist test flash-rootfs
